[tool.poetry]
name = "learn-oop-with-me"
version = "0.1.0"
description = ""
authors = ["Dawid Kraczkowski <dawid.kraczkowski@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
